<resources>
    <string name="app_name">GTD</string>
    <string name="please_check_network">请检查网路</string>
    <string name="link_out_time">连接超时</string>
    <string name="please_input_account">请输入账号</string>
    <string name="please_input_password">请输入密码</string>
    <string name="account">账号</string>
    <string name="password">密码</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="success_login">登录成功</string>
    <string name="input_account_error">用户名只能是英文数字组合</string>
    <string name="input_password_error">密码只能是英文数字组合</string>
    <string name="success_add">添加成功</string>
    <string name="success_edit">修改成功</string>
    <string name="example_study">例如：学习</string>
    <string name="content">内容</string>
    <string name="success_delete">删除成功</string>
    <string name="doing">进行中</string>
    <string name="done">已完成</string>
    <string name="delete">删除</string>
    <string name="height_priority">高</string>
    <string name="middle_priority">中</string>
    <string name="low_priority">低</string>
    <string name="default_priority">默认</string>
    <string name="please_input_title">请输入标题</string>
    <string name="update">修改</string>
    <string name="please_login">请先登录</string>
    <string name="logout_success">退出成功</string>
    <string name="logout">退出</string>
    <string name="loginAndRegister">登录/注册</string>
    <string name="category">分类</string>
    <string name="category1">学习</string>
    <string name="category2">工作</string>
    <string name="category3">娱乐</string>
    <string name="category4">生活</string>
    <string name="category_all">所有</string>
    <string name="hide_expired">隐藏已过期任务</string>
    <string name="hide_done">隐藏已完成任务</string>
</resources>
