<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/root_view"
    android:background="@color/overlay_dark_10"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    >


    <FrameLayout
        android:layout_gravity="center"
        android:background="@drawable/login_bg"
        android:layout_margin="10dp"
        android:layout_width="240dp"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/pb_loading"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"/>

        <LinearLayout
            android:id="@+id/ll_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginStart="2dp"
                android:text="GTD"
                android:textColor="@color/colorAccent" />

            <View
                android:layout_width="28dp"
                android:layout_height="2dp"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="2dp"
                android:layout_marginStart="2dp"
                android:layout_marginTop="5dp"
                android:background="@color/colorAccent" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/et_account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/account"
                    android:inputType="textAutoComplete"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:imeActionId="6"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="48dp">

                <Button
                    android:id="@+id/btn_switch"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:autoLink="all"
                    android:gravity="start|center_vertical"
                    android:text="@string/register"
                    android:textSize="12sp" />


                <Button
                    android:id="@+id/btn_confirm"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:text="@string/login" />
            </FrameLayout>

        </LinearLayout>

    </FrameLayout>

</FrameLayout>
