<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/left_drawer"
    android:layout_width="240dp"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:background="@color/white"
    android:clickable="true"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey_50">

        <com.jun.gtd.view.CircleImageView
            android:id="@+id/img_user"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="10dp"
            app:srcCompat="@drawable/ic_user"
            app:tint="@color/grey_500"/>

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/img_user"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/img_user"
            android:background="@drawable/login_text_bg"
            android:paddingLeft="13dp"
            android:paddingTop="5dp"
            android:paddingRight="13dp"
            android:paddingBottom="5dp"
            android:text="登录/注册" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingTop="20dp">

        <LinearLayout
            android:id="@+id/btn_category_all"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/category_item_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="8dp">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/img1"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_marginRight="2dp"
                app:srcCompat="@drawable/ic_category"
                app:tint="@color/colorAccent" />

            <TextView
                android:id="@+id/tv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:text="@string/category_all"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_category_1"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="8dp">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/img1"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_marginRight="2dp"
                app:srcCompat="@drawable/ic_category"
                app:tint="@color/grey_500" />

            <TextView
                android:id="@+id/tv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:text="@string/category1"
                android:textColor="@color/grey_500"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_category_2"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="8dp">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/img1"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_marginRight="2dp"
                app:srcCompat="@drawable/ic_category"
                app:tint="@color/grey_500" />

            <TextView
                android:id="@+id/tv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:text="@string/category2"
                android:textColor="@color/grey_500"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_category_3"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="8dp">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/img1"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_marginRight="2dp"
                app:srcCompat="@drawable/ic_category"
                app:tint="@color/grey_500" />

            <TextView
                android:id="@+id/tv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:text="@string/category3"
                android:textColor="@color/grey_500"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_category_4"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="8dp">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/img1"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_marginRight="2dp"
                app:srcCompat="@drawable/ic_category"
                app:tint="@color/grey_500" />

            <TextView
                android:id="@+id/tv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:text="@string/category4"
                android:textColor="@color/grey_500"
                android:textSize="16sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:layout_margin="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/overlay_dark_20"></View>

        <LinearLayout
            android:id="@+id/btn_hide_done"

            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="8dp">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/img1"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginRight="4dp"
                app:srcCompat="@drawable/ic_undone"
                app:tint="@color/grey_500" />

            <TextView
                android:id="@+id/tv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:text="@string/hide_done"
                android:textColor="@color/grey_500"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_hide_expired"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="8dp">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/img1"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_marginRight="4dp"
                app:srcCompat="@drawable/ic_expired"
                app:tint="@color/grey_500" />

            <TextView
                android:id="@+id/tv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:text="@string/hide_expired"
                android:textColor="@color/grey_500"
                android:textSize="16sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:layout_margin="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/overlay_dark_20"></View>


        <LinearLayout
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="8dp">

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_marginRight="4dp"
                app:srcCompat="@drawable/ic_time"
                app:tint="@color/grey_500" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_order_default"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/category_item_bg"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="默认"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_order_dcs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:layout_marginRight="6dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="逆序"
                    android:textColor="@color/grey_500"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_order_acs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="顺序"
                    android:textColor="@color/grey_500"
                    android:textSize="16sp" />


            </LinearLayout>


        </LinearLayout>


    </LinearLayout>


    <!--<FrameLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="60dp">-->

    <!--<android.support.v7.widget.AppCompatImageView-->
    <!--android:layout_gravity="center"-->
    <!--app:srcCompat="@drawable/ic_out"-->
    <!--app:tint="@color/grey_700"-->
    <!--android:layout_width="30dp"-->
    <!--android:layout_height="30dp" />-->

    <!--</FrameLayout>-->


</LinearLayout>







